FinTech-Web-App/payment-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: department-service
spec:
  selector:
    app: department-service
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
